Added dependencies description